# aoc2023

./: .gitignore  Cargo.toml  flake.nix
d01/: Cargo.toml
d01/src/: lib.rs  p1.rs  p2.rs
d02/: Cargo.toml
d02/src/: game.rs  lib.rs  p1.rs  p2.rs
d03/: Cargo.toml
d03/src/: lib.rs  number.rs  p1.rs  p2.rs  schematic.rs
d04/: Cargo.toml
d04/src/: card.rs  lib.rs  p1.rs  p2.rs
d05/: Cargo.toml
d05/src/: p1.rs  p2.rs
d06/: Cargo.toml
d06/src/: lib.rs  p1.rs  p2.rs  sheet.rs
d07/: Cargo.toml
d07/src/: camel_card.rs  lib.rs  p1.rs  p2.rs
d08/: Cargo.toml
d08/src/: map.rs  p1.rs  p2.rs
d09/: Cargo.toml
d09/src/: lib.rs  oasis.rs  p1.rs  p2.rs
d10/: Cargo.toml
d10/src/: lib.rs  map.rs  p1.rs  p2.rs
d11/: Cargo.toml
d11/src/: lib.rs  p1.rs  p2.rs
d12/: Cargo.toml
d12/src/: lib.rs  p1.rs  p2.rs
d12/src/record/: mod.rs  parse.rs
d13/: Cargo.toml
d13/src/: lib.rs  p1.rs  p2.rs
d13/src/pattern/: mod.rs  parse.rs
d14/: Cargo.toml
d14/src/: lib.rs  p1.rs  p2.rs
d14/src/platform/: mod.rs  parse.rs
d15/: Cargo.toml
d15/src/: lib.rs  p1.rs  p2.rs
d15/src/step/: mod.rs  parse.rs
d16/: Cargo.toml
d16/src/: lib.rs  p1.rs  p2.rs
d16/src/contraption/: mod.rs  parse.rs
d17/: Cargo.toml
d17/src/: lib.rs  p1.rs  p2.rs  parse.rs
d19/: Cargo.toml
d19/src/: lib.rs  p1.rs  p2.rs  parse.rs
