# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["d01", "d02", "d03", "d04", "d05", "d06", "d07"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.89"
itertools = "0.13.0"
libaoc = { git = "https://github.com/ugur-a/libaoc" }
nom = "7.1.3"
test-case = "3.3.1"

[profile.release]
debug = true

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_sign_loss = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
