[package]
name = "d04"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
libaoc.workspace = true
nom.workspace = true

[dev-dependencies]
test-case.workspace = true

[lints]
workspace = true
